[package]
name = "molar_xdrfile"
version = "0.9.1"
rust-version = "1.83"
edition = "2021"
authors = ["Semen Yesylevskyy <yesint4@yahoo.com>"]
license = "Artistic-2.0"
homepage = "https://github.com/yesint/molar_xdrfile"
repository = "https://github.com/yesint/molar_xdrfile"
documentation = "https://docs.rs/molar"
readme = "README.md"
keywords = ["MD", "science", "trajectory", "modeling"]
categories = ["science", "simulation", "external-ffi-bindings"]
description = "Legacy xdrfile FFI bindings for molar. This crate is deprecated! Use molly instead."

[build-dependencies]
cc = "1.2.55"
